[package]
name = "aido"
version = "0.1.0"
edition = "2021"

[dependencies]
clap          = { version = "4", features = ["derive"] }
dirs          = "4"
genai         = "0.1.18"
tokio         = { version = "1.43.0", features = ["full", "macros"] }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
syntect       = "5.2.0"
terminal_size = "0.4.1"

